hydrated-manifests/kiali-operator/kiali-operator/templates/default-sidecar.yaml
---
# Source: kiali-operator/templates/default-sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
spec:
  egress:
    - hosts:
        - "./*"
        - "istio-system/*"
        - "prometheus-operator/*"
